[gd_scene load_steps=9 format=2]

[ext_resource path="res://special_scenes/combat_UI/gameover/WinnerBanner.tscn" type="PackedScene" id=1]
[ext_resource path="res://special_scenes/combat_UI/gameover/HallOfFame.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Pixel-Powerline-440555/Pixel Powerline.otf" type="DynamicFontData" id=3]
[ext_resource path="res://combat/levels/background/menus.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/DefaultFont21.tres" type="DynamicFont" id=5]
[ext_resource path="res://interface/themes/olympic_theme.tres" type="Theme" id=9]

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 21
font_data = ExtResource( 3 )

[node name="HallOfFame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
champion_scene = ExtResource( 1 )

[node name="ColorRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 24.0
margin_bottom = 642.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 76.0
theme = ExtResource( 9 )
custom_colors/font_color = Color( 1, 0.870588, 0.372549, 1 )
custom_colors/font_color_shadow = Color( 0.835294, 0.317647, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 3 )
text = "HALL OF FAME"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 1280.0
margin_bottom = 106.0
theme = ExtResource( 9 )
custom_colors/font_color_shadow = Color( 0.2, 0.317647, 0.482353, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
uppercase = true

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 1280.0
margin_bottom = 136.0
theme = ExtResource( 9 )
custom_colors/font_color_shadow = Color( 0.2, 0.317647, 0.482353, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/font = ExtResource( 5 )
text = "PRESS A BUTTON TO CONTINUE"
align = 1
valign = 1
uppercase = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
unique_name_in_owner = true
margin_left = 94.0
margin_top = 130.0
margin_right = 1280.0
margin_bottom = 702.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 360.0
margin_bottom = 200.0

[node name="SessionWon" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 360.0
margin_bottom = 200.0

[node name="WinnerBanner" parent="ScrollContainer/VBoxContainer/SessionWon" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_right = 360.0
margin_bottom = 200.0
rect_min_size = Vector2( 360, 200 )
